finance page added: cashflows and supplies

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -36,7 +36,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Финансы</a>
+            <a href="{% url 'finance-page' %}" class="nav-link">Финансы</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Профиль</a>
