--- a/frontend/templates/home-page.html
+++ b/frontend/templates/home-page.html
@@ -81,7 +81,7 @@
               <label class="btn btn-outline-primary" for="cashPayment">Наличные</label>
               
               <input type="radio" class="btn-check" name="paymentType" id="bankPayment" autocomplete="off">
-              <label class="btn btn-outline-primary" for="bankPayment">Банковская карта</label>
+              <label class="btn btn-outline-primary" for="bankPayment">Банк. счёт</label>
               
               <input type="radio" class="btn-check" name="paymentType" id="mixedPayment" autocomplete="off">
               <label class="btn btn-outline-primary" for="mixedPayment">Смешанная</label>
@@ -177,7 +177,7 @@
               <label class="btn btn-outline-primary" for="editCashPayment">Наличные</label>
               
               <input type="radio" class="btn-check" name="editPaymentType" id="editBankPayment" autocomplete="off">
-              <label class="btn btn-outline-primary" for="editBankPayment">Банковская карта</label>
+              <label class="btn btn-outline-primary" for="editBankPayment">Банк. счёт</label>
               
               <input type="radio" class="btn-check" name="editPaymentType" id="editMixedPayment" autocomplete="off">
               <label class="btn btn-outline-primary" for="editMixedPayment">Смешанная</label>
