supplier.last_accessed updated | supply.arrival_date added

--- a/frontend/static/css/finance-page.css
+++ b/frontend/static/css/finance-page.css
@@ -16,6 +16,9 @@
 
 /* Адаптивные стили */
 @media (max-width: 768px) {
+      .hide-on-mobile {
+    display: none !important;
+  }
     #cashFlowTable {
         font-size: 12px;
     }
