--- a/frontend/templates/home-page.html
+++ b/frontend/templates/home-page.html
@@ -282,6 +282,6 @@
 
   <script src="{% static 'js/home-page.js' %}"></script>
    <link rel="stylesheet" href="{% static 'css/home-page.css' %}">
-   <link rel="stylesheet" href="{% static 'css/adaptive.css' %}">
+   <!-- <link rel="stylesheet" href="{% static 'css/adaptive.css' %}"> -->
 
 {% endblock externals %}
