--- a/frontend/templates/home-page.html
+++ b/frontend/templates/home-page.html
@@ -37,9 +37,9 @@
         <div class="mb-3">
           <label for="amountInput" class="form-label fw-bold">Сумма*</label>
           <div class="input-group">
-            <span class="input-group-text">₸</span>
-            <input type="number" class="form-control" id="amountInput" placeholder="Введите сумму" required>
-          </div>
+                            <span class="input-group-text">₸</span>
+                            <input type="number" class="form-control" id="amount" required>
+                        </div>
           <div class="form-text">Положительное число - доход, отрицательное - расход</div>
         </div>
         <div class="mb-3">
