everyday supply base added

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -43,7 +43,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Профиль</a></li>
               <li><a class="dropdown-item" href="#">История</a></li>
-              <li><a class="dropdown-item" href="#">Настройки</a></li>
+              <li><a class="dropdown-item" href="{% url 'settings-page' %}">Настройки</a></li>
               <li><a class="dropdown-item" href="#">Выйти</a></li>
             </ul>
           </li>
