--- a/frontend/templates/clients-page.html
+++ b/frontend/templates/clients-page.html
@@ -122,7 +122,7 @@
           
           <hr>
           
-          <div class="d-flex justify-content-between align-items-center mb-3">
+          <div class="d-flex justify-content-between align-items-center mb-3 addDebtSection">
             <h5>Долги клиента</h5>
             <button type="button" class="btn btn-sm btn-success" id="addDebtBtn">
               <i class="fas fa-plus me-1"></i>Добавить долг
@@ -148,7 +148,7 @@
           </div>
           
           <!-- Список долгов -->
-          <div class="table-responsive">
+          <div class="table-responsive debtList" >
             <table class="table table-sm" id="debtsTable">
               <thead>
                 <tr>
