--- a/frontend/templates/suppliers-page.html
+++ b/frontend/templates/suppliers-page.html
@@ -50,11 +50,13 @@
     </table>
     
     <!-- Пагинация -->
-    <nav aria-label="Page navigation" class="mt-3">
+    <!-- <nav aria-label="Page navigation" class="mt-3">
       <ul class="pagination justify-content-center" id="pagination">
-        <!-- Пагинация будет загружена через JavaScript -->
       </ul>
-    </nav>
+    </nav> -->
+    <div class="pagination-container">
+      <ul id="pagination"></ul>
+    </div>
   </div>
 
   <!-- Сообщение при отсутствии данных -->
