--- a/frontend/templates/clients-page.html
+++ b/frontend/templates/clients-page.html
@@ -44,6 +44,10 @@
           <option value="50">50</option>
         </select>
       </div>
+      <div class="filter-group">
+        <label for="">Показать нули</label>
+        <input type="checkbox" checked id="showZerosCheckbox">
+      </div>
     </div>
   </div>
 
