--- a/frontend_html/templates/home-page.html
+++ b/frontend_html/templates/home-page.html
@@ -104,7 +104,7 @@
               <label for="priceCashInput" class="form-label">Сумма (наличные)</label>
               <div class="input-group">
                 <span class="input-group-text">₸</span>
-                <input type="text" class="form-control currency-mask" id="priceCashInput">
+                <input type="text" class="form-control currency-mask" id="priceCashInput" maxlength="7">
               </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
               <label for="priceBankInput" class="form-label">Сумма (банковская карта)</label>
               <div class="input-group">
                 <span class="input-group-text">₸</span>
-                <input type="text" class="form-control currency-mask" id="priceBankInput" >
+                <input type="text" class="form-control currency-mask" id="priceBankInput"  maxlength="7">
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
               <label for="editPriceCashInput" class="form-label">Сумма (наличные)</label>
               <div class="input-group">
                 <span class="input-group-text">₸</span>
-                <input type="text" class="form-control currency-mask" id="editPriceCashInput">
+                <input type="text" class="form-control currency-mask" id="editPriceCashInput" maxlength="7">
               </div>
             </div>
           </div>
@@ -221,7 +221,7 @@
               <label for="editPriceBankInput" class="form-label">Сумма (банковская карта)</label>
               <div class="input-group">
                 <span class="input-group-text">₸</span>
-                <input type="text" class="form-control currency-mask" id="editPriceBankInput">
+                <input type="text" class="form-control currency-mask" id="editPriceBankInput" maxlength="7">
               </div>
             </div>
           </div>
